# OctoPrint-FixCBDFirmware

./: .eslintrc.yaml  .git-blame-ignore-revs  .pre-commit-config.yaml  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
extras/: fixcbdfirmware.md
octoprint_fixcbdfirmware/: __init__.py
